fixed z-index for player

--- a/src/css/modules/youtube-player.less
+++ b/src/css/modules/youtube-player.less
@@ -104,7 +104,7 @@
 }
 .youtube-toolbar {
 	position: relative;
-	z-index: @zindex-navbar-fixed;
+	z-index: 1031;
 	margin: 0;
 	float: left;
 
